# Terramapper

./: .gitignore  CMakeLists.txt  Makefile  README.md  hardware.json  main.cpp  out_taskflow.json  taskflow.json  taskflow_consistency_check.json  taskflow_dp_10iter.json  taskflow_dp_1iter.json  taskflow_memaware_test.json  test.json  tmp_taskflow.json
docs/: Workload_Generator.md  mapper_architecture.dot  mapper_architecture.mmd  workload_format.md
examples/: cg_iteration_workload.json  supernodal_workload.json
hardware_topology/: cg_hardware.json  cg_hardware_4gpu.json  cg_hardware_4gpu_lowflops_highbw.json  json_io.cpp  json_io.h  topology.cpp  topology.h
mapper/: mapper.cpp  mapper.h
mapping/: graph.cpp  graph.h  mapper.cpp  mapper.h  strategies.cpp  strategies.h
plots/: compute_comm_share_multi_font.png.dot  compute_comm_share_multi_old.png.dot  plot_comm_share.py  plot_comm_share_bar.py  plot_device_distribution.py
schedule/: scheduler.cpp  scheduler.h
taskflow/: json.cpp  json.h  taskflow.cpp  taskflow.h
trace_generator/: trace.cpp  trace.h
visualize/: sharpen_png.py  taskflow_viz.py  workload_viz.py
workload/: bcsstk08_HB_1074_12960_300.json  bcsstk15_HB_3948_117816_200.json  bcsstk36_Boeing_23052_1143140_100.json  cg_iteration_workload.json  cg_iteration_workload_heavy_10.json  cg_iteration_workload_large.json  cg_iteration_workload_parallel_1.json  graph.h  json_io.cpp  json_io.h  node.h  workload.cpp  workload.h  workload_2.py
